# Pega-en-Chile

./: .env.example  .gitignore  LICENSE  Pega-en-Chile.code-workspace  README.md  pyproject.toml
app/: streamlit_app.py
data/: network.example.yaml  profile.example.yaml
pega_agent/: __init__.py  cli.py  config.py  db.py  digest.py  graph.py  llm.py  models.py  resume_writer.py
pega_agent/contacts/: __init__.py  agent.py
pega_agent/discovery/: agent.py
pega_agent/discovery/adapters/: __init__.py  base.py  getonboard.py  jobspy_adapter.py
pega_agent/interview/: agent.py
pega_agent/matcher/: agent.py  agent_v2.py  embeddings.py
pega_agent/negotiation/: agent.py
pega_agent/network/: loader.py
pega_agent/outreach/: agent.py
pega_agent/profile/: agent.py
pega_agent/recruiter/: __init__.py  agent.py
pega_agent/research/: agent.py
pega_agent/search/: loader.py
pega_agent/tailor/: agent.py
scripts/: _contact_coverage.py  _lookup_picks.py  _prep_picks.ps1  rerank.py  retailor_top.py  schedule-daily.ps1
skills/chile-market-map/: SKILL.md
skills/comp-bands-chile/: SKILL.md
skills/interview-pm-latam/: SKILL.md
skills/network-graph/: SKILL.md
tests/: test_smoke.py
